force-app/main/default/objects/LWCCaseTimer__Session_Time__c/LWCCaseTimer__Session_Time__c.object-meta.xml
<CustomObject>
    <description>Keep track of every session and the time associated with it.</description>
    <label>Session Time</label>
    <nameField>
        <label>Session Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>