force-app/main/default/objects/LWCCaseTimer__Session_Time__c/fields/LWCCaseTimer__Agent__c.field-meta.xml
<CustomField>
    <fullName>LWCCaseTimer__Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Field to the Agent</description>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Session_Times</relationshipName>
    <type>Lookup</type>
</CustomField>