force-app/main/default/objects/LWCCaseTimer__Session_Time__c/fields/LWCCaseTimer__Case__c.field-meta.xml
<CustomField>
    <fullName>LWCCaseTimer__Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Session Times</relationshipLabel>
    <relationshipName>Session_Times</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>