force-app/main/default/objects/LWCCaseTimer__Session_Time__c/fields/LWCCaseTimer__Comments__c.field-meta.xml
<CustomField>
    <fullName>LWCCaseTimer__Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>