force-app/main/default/objects/LWCCaseTimer__Session_Time__c/fields/LWCCaseTimer__Date__c.field-meta.xml
<CustomField>
    <fullName>LWCCaseTimer__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>