force-app/main/default/objects/LWCCaseTimer__Session_Time__c/fields/LWCCaseTimer__Duration__c.field-meta.xml
<CustomField>
    <fullName>LWCCaseTimer__Duration__c</fullName>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>