force-app/main/default/objects/LWCCaseTimer__Session_Time__c/fields/LWCCaseTimer__Manual_Entry__c.field-meta.xml
<CustomField>
    <fullName>LWCCaseTimer__Manual_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Entry</label>
    <type>Checkbox</type>
</CustomField>