force-app/main/default/objects/LWCCaseTimer__Session_Time__c/listViews/LWCCaseTimer__All.listView-meta.xml
<ListView>
    <fullName>LWCCaseTimer__All</fullName>
    <columns>NAME</columns>
    <columns>LWCCaseTimer__Case__c</columns>
    <columns>LWCCaseTimer__Agent__c</columns>
    <columns>LWCCaseTimer__Date__c</columns>
    <columns>LWCCaseTimer__Case_Status__c</columns>
    <columns>LWCCaseTimer__Duration__c</columns>
    <columns>LWCCaseTimer__Manual_Entry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Session Times</label>
</ListView>